--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   <main>
     <!-- попадет в блок main все кроме футера, главное сдержимое текущей старницы -->
     <section class="hero">
-    <a href="#" class="instagram hero__instagram">Instagam</a> 
+      <div class="instagram hero__instagram">
+        <a href="#" class="instagram__link">Instagram</a> 
+         </div>
     <div class="hero__content">
       <div class="container">
       <h1 class="title hero__title">Турецкий ремонт в Ростове-на-дону</h1>   
