--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
       <!-- кнопка слева внизу на главной картинке -->
     </section>
+    <section class="section control">
+      <div class="container">
+        <div class="section-title">
+          <h2 class="section-title__heading">Онлайн контроль</h2>
+          <!-- /.section-title__heading -->
+          <div class="section-title__image">
+            <img src="img/Video.svg" alt="video">
+          </div>
+          <!-- /.section-title__image -->
+        </div>
+        <!-- /.section-title -->
+      </div>
+      <!-- /.container -->
+    </section>
   </main>
 </body>
 
