--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
       <!-- кнопка слева внизу на главной картинке -->
     </section>
-    <section class="section section--dark progects">
+    <section class="section section--dark projects">
       <div class="container">
         <div class="row">
           <div class="col-50">
@@ -179,7 +179,7 @@
     </section>
     <section class="section control">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title control__section-title section-title--light">
           <h2 class="section-title__heading">Онлайн контроль</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image">
@@ -188,6 +188,31 @@
           <!-- /.section-title__image -->
         </div>
         <!-- /.section-title -->
+        <div class="control__video vedeo">
+          <img src="img/play-icon.svg" alt="play icon" class="video__play">
+        </div>
+        <!-- /.control__video vedeo -->
+        <p class="control__text">
+          На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.
+        </p>
+        <form action="#" class="form control__form">
+         <div class="control__input-group">
+          <label for="user-name" class="lebel form__label control__label label--dark">Имя</label>
+          <input type="text" class="input form__input control__input" id="user-name" placeholder="Как Вас зовут:">
+         </div>
+          <div class="control__input-group">
+            <label for="user-phone" class="lebel form__label control__label label--dark ">Телефон</label>
+          <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:"> 
+          </div>          
+          <button class="button button--primary control__button">Отправить</button>
+          <div class="policy control__policy">
+            <!-- соглашение с политикой -->
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label control__policy-label ">я соглашаюсь с обработкой данных</label>
+          </div>
+            <!-- /.policy control__policy -->
+        </form>
+        <!-- /.form modal__form -->
       </div>
       <!-- /.container -->
     </section>
@@ -452,11 +477,12 @@
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <form action="#" class="form modal__form">
         <label for="user-name" class="lebel form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input" id="user-name" placeholder="Как Вас зовут:">
+        <input type="text" class="input form__input modal__input input--light" id="user-name" placeholder="Как Вас зовут:">
+
         <label for="user-phone" class="lebel form__label label--light ">Телефон</label>
-        <input type="tel" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
+        <input type="tel" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
         <label for="user-email" class="lebel form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input" id="user-email" placeholder="Ваш Email">
+        <input type="email" class="input form__input modal__input input--light" id="user-email" placeholder="Ваш Email">
         <div class="policy modal__policy">
         <!-- соглашение с политикой -->
         <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
