--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
   
@@ -17,7 +18,7 @@
     <div class="container">
       <div class="menu">
         <!--блок задаем menu потому что точно такойе же внизу в футере и мы не можем назвать header -->
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo wow fadeInRight" data-wow-delay="0.2s">Repair Design Project</div>
         <!--блок логотип с миксованием logo-класс блока; menu__logo-класс элемента -->
         <nav class="nav menu__nav">
           <!--блок навигационное меню с миксованием в которую вхдят 6 ссылок-->
@@ -51,16 +52,16 @@
       </div>
       <div class="container">
        <div class="hero__content">
-          <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от
+          <h1 class="title hero__title wow fadeInRight" data-wow-delay="0.2s" >Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text wow fadeInRight" data-wow-delay="0.5s">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от
             стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
+          <button class="button hero__button button--primary wow fadeInRight" data-wow-delay="1s"  data-toggle="modal">Рассчитать стоимость</button>
+          <button class="button hero__button button--outline wow fadeInRight" data-wow-delay="1s">Отправить заявку</button>
         </div>
        <!-- /.hero_content -->
       </div>
       <!-- /.container -->
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#" class="hero__scroll-down wow pulse infinite" data-wow-iteration="2" data-wow-delay="5s">листайте вниз</a>
       <!-- кнопка слева внизу на главной картинке -->
     </section>
     <section class="section section--dark projects">
@@ -477,7 +478,7 @@
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <form action="#" class="form modal__form">
         <label for="user-name" class="lebel form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input input--light" id="user-name" placeholder="Как Вас зовут:">
+        <input type="text" class="input form__input modal__input input--light" id="user-name" placehsectiondolder="Как Вас зовут:">
 
         <label for="user-phone" class="lebel form__label label--light ">Телефон</label>
         <input type="tel" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
@@ -499,6 +500,7 @@
    <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
    
 </body>
