--- a/index.html
+++ b/index.html
@@ -544,13 +544,18 @@
       <button class="modal__close"></button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <form action="#" class="form modal__form">
-        <label for="user-name" class="lebel form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input input--light" id="user-name" placehsectiondolder="Как Вас зовут:">
-
-        <label for="user-phone" class="lebel form__label label--light ">Телефон</label>
-        <input type="tel" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
-        <label for="user-email" class="lebel form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input input--light" id="user-email" placeholder="Ваш Email">
+        <div class="input-group modal__input-group">
+          <label for="user-name" class="lebel form__label label--light">Имя</label>
+          <input type="text" name="userName" class="input form__input modal__input input--light" id="user-name" placeholder="Как Вас зовут:">
+        </div>
+        <div class="input-group modal__input-group">
+          <label for="user-phone" class="lebel form__label label--light ">Телефон</label>
+          <input type="tel" name="userPhone" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
+        </div>
+        <div class="input-group modal__input-group">
+          <label for="user-email" class="lebel form__label label--light">Email</label>
+          <input type="email" name="userEmail" class="input form__input modal__input input--light" id="user-email" placeholder="Ваш Email">
+        </div>                
         <div class="policy modal__policy">
         <!-- соглашение с политикой -->
         <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
@@ -568,6 +573,8 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
   <script src="js/main.js"></script>
    
 </body>
