feat: add map from map-constructor yandex

--- a/index.html
+++ b/index.html
@@ -504,6 +504,11 @@
 
       </div>
       <!-- /.footer-wrap -->
+      <div class="map footer__map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59c3ebfdebdacfe344cac794f16344783d25a44a76e711add271596d1b07c6ed&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=true"></script>
+
+      </div>
+      <!-- /.map footer__map  -->
       
     </div>
     <!-- /.container -->
