feat: add video from YouTube

--- a/index.html
+++ b/index.html
@@ -189,10 +189,13 @@
           <!-- /.section-title__image -->
         </div>
         <!-- /.section-title -->
-        <div class="control__video vedeo">
-          <img src="img/play-icon.svg" alt="play icon" class="video__play">
+        <div class="control__video vedeo" id="player">
+          <script src="https://www.youtube.com/iframe_api"></script>
+           <img src="img/play-icon.svg" alt="play icon" class="video__play"> -->
         </div>
         <!-- /.control__video vedeo -->
+        <!-- <iframe class="control__video vedeo"width="100%"  src="https://www.youtube.com/embed/ht1zJeAl-TY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        
         <p class="control__text">
           На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.
         </p>
